# aidbox-python-sdk

./: .env-tpl  .env.tpl  .gitignore  CHANGELOG.md  Dockerfile  LICENSE.md  MANIFEST.in  Makefile  Pipfile  README.md  activate_settings.sh  compose.yaml  docker-compose.yaml  env_tests  example.py  main.py  pyproject.toml  run_test.sh  setup.cfg  setup.py
.github/workflows/: build.yaml  publish.yaml
aidbox_python_sdk/: __init__.py  aidboxpy.py  app_keys.py  db.py  db_migrations.py  exceptions.py  gunicorn.py  handlers.py  main.py  manifest.py  operation_outcome.py  pytest_plugin.py  sdk.py  settings.py  types.py  views.py
envs/: aidbox  app  db
example/: .dockerignore  .env.example  .env.tpl  Dockerfile  LICENSE  Makefile  Pipfile  README.md  compose.test-env.yaml  compose.yaml  docker-compose.tests.yaml  docker-compose.yaml  env_tests  main.py  pyproject.toml  run_test.sh  update-version.sh
example/aidbox-project/: .gitignore  Dockerfile
example/aidbox-project/zenproject/zrc/: main.edn
example/app/: __init__.py  config.py  manifest.py  sdk.py  timeout.py
example/app/operations/: example.py
example/backend/: .env.tests.local.example  .gitignore  Makefile  README.md  compose.test-env.yaml  main.py  pyproject.toml  run_test.sh  update-commit-hash.sh
example/backend/app/: app_keys.py  version.py
example/backend/app/operations/: example.py
example/backend/contrib/: fhirpy.py
example/backend/env_tests/: aidbox  backend
example/backend/tests/: conftest.py  test_db_isolation.py  test_example.py
example/env/: aidbox  backend  db
example/env_tests/: aidbox  app
example/tests/: test_base.py  test_db_isolation.py  test_timeout.py
requirements/: base.txt  dev.txt
tests/: __init__.py  conftest.py  test_sdk.py
zenproject/: zen-package.edn
zenproject/zrc/: system.edn
