[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --color=yes"
testpaths = ["tests"]
log_cli = true
log_cli_level = "INFO"

[tool.autohooks]
mode = "pipenv"
pre-commit = ["autohooks.plugins.black", "autohooks.plugins.isort"]

[tool.black]
line-length = 100
target-version = ['py311']
exclude = '''
(
  /(
    | \.git
    | \.pytest_cache
    | pyproject.toml
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
line_length = 100
skip = [".gitignore"]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "aidbox_python_sdk"
description = "Aidbox SDK for python"
readme = "README.md"
license = { file = "LICENSE.md" }
keywords = ["fhir"]
dynamic = ["version"]
authors = [
  { name = "beda.software", email = "aidbox-python-sdk@beda.software" },
]
dependencies = [
  "uvloop>=0.13.0",
  "aiohttp>=3.6.2",
  "SQLAlchemy>=1.3.10",
  "fhirpy>=1.1.0",
  "aidboxpy>=1.1.0",
  "coloredlogs",
  "jsonschema>=4.4.0",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
test = ["pytest>=3.6.1", "pytest-asyncio>=0.10.0", "responses>=0.10.8"]

[project.urls]
homepage = "https://github.com/Aidbox/aidbox-python-sdk"
documentation = "https://github.com/Aidbox/aidbox-python-sdk#readme"
repository = "https://github.com/Aidbox/aidbox-python-sdk.git"