[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --color=yes"
testpaths = ["tests"]
log_cli = true
log_cli_level = "INFO"

[tool.autohooks]
mode = "pipenv"
pre-commit = ["autohooks.plugins.black", "autohooks.plugins.isort"]

[tool.black]
line-length = 100
target-version = ['py311']
exclude = '''
(
  /(
    | \.git
    | \.pytest_cache
    | pyproject.toml
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
line_length = 100
skip = [".gitignore"]

[tool.setuptools]
zip-safe = false
packages = ["aidbox_python_sdk"]

[tool.setuptools.dynamic]
version = { attr = "aidbox_python_sdk.VERSION" }

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "aidbox-python-sdk"
description = "Aidbox SDK for python"
readme = "README.md"
license = { file = "LICENSE.md" }
keywords = ["fhir"]
dynamic = ["version"]
authors = [
  { name = "beda.software", email = "aidbox-python-sdk@beda.software" },
]
dependencies = [
  "uvloop>=0.13.0",
  "aiohttp>=3.6.2",
  "SQLAlchemy>=1.3.10",
  "fhirpy>=1.3.0",
  "coloredlogs",
  "jsonschema>=4.4.0",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"

[project.optional-dependencies]
test = [
  "pytest>=6.0.0",
  "pytest-asyncio>=0.20.0",
  "pytest-aiohttp>=1.0.4",
  "pytest-cov>=4.0.0",
]
dev = [
  "black",
  "isort",
  "autohooks",
  "autohooks-plugin-isort",
  "autohooks-plugin-black",
]

[project.urls]
homepage = "https://github.com/Aidbox/aidbox-python-sdk"
documentation = "https://github.com/Aidbox/aidbox-python-sdk#readme"
repository = "https://github.com/Aidbox/aidbox-python-sdk.git"
