[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --color=yes"
testpaths = ["tests"]
log_cli = true
log_cli_level = "INFO"

[tool.autohooks]
mode = "pipenv"
pre-commit = ["autohooks.plugins.black", "autohooks.plugins.ruff"]

[tool.black]
line-length = 100
target-version = ['py311']
exclude = '''
(
  /(
    | \.git
    | \.pytest_cache
    | pyproject.toml
    | dist
  )/
)
'''

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["example"]

[tool.ruff.lint]
select = ["I", "E", "F", "N", "B", "C4", "PT", "UP", "I001", "A", "RET", "TID251", "RUF", "SIM", "PYI", "T20", "PIE", "G", "ISC", "PL"]
# E501 is disabled because line limit is controlled by black
# RUF005 is disabled because we use asyncio tasks without cancelling
# RUF015 is disabled because index access is preferred way for us
# RUF019 is disabled because it's needed for pyright
# PIE804 is disabled because we often use FHIR like camelCase variables
# SIM102 is disabled because nested if's are more readable
# SIM117 is disabled because nested with's are more readable
ignore = ["E501", "RUF006", "RUF015", "RUF019", "PIE804", "SIM102", "SIM117", "PLR2004"]
unfixable = ["F401"]


[tool.setuptools]
zip-safe = false
packages = ["aidbox_python_sdk"]

[tool.setuptools.dynamic]
version = { attr = "aidbox_python_sdk.VERSION" }

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "aidbox-python-sdk"
description = "Aidbox SDK for python"
readme = "README.md"
license = { file = "LICENSE.md" }
keywords = ["fhir"]
dynamic = ["version"]
authors = [
  { name = "beda.software", email = "aidbox-python-sdk@beda.software" },
]
dependencies = [
  "aiohttp>=3.6.2",
  "SQLAlchemy>=1.3.10",
  "fhirpy>=1.3.0",
  "jsonschema>=4.4.0",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"

[project.optional-dependencies]
test = [
  "pytest~=6.0.0",
  "pytest-asyncio~=0.20.0",
  "pytest-aiohttp~=1.0.4",
  "pytest-cov~=4.0.0"
]
dev = [
  "black",
  "autohooks",
  "autohooks-plugin-ruff",
  "autohooks-plugin-black",
]

[project.urls]
homepage = "https://github.com/Aidbox/aidbox-python-sdk"
documentation = "https://github.com/Aidbox/aidbox-python-sdk#readme"
repository = "https://github.com/Aidbox/aidbox-python-sdk.git"
